<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.edu.upc.appapoderado.activities.RegistroActivity"
    tools:showIn="@layout/activity_registro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingRight="30dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:padding="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="@drawable/nannyicon"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="40dp"
            android:text="Registrece"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            />


        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseNombre"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseApellido"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseDni"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseCelular"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/IngreseCorreoElectronico"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/IngreseContrasenia"
            android:drawablePadding="4dp" />

        <EditText
            android:id="@+id/txtReContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/IngreseReContrasenia"
            android:drawablePadding="4dp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrarse"/>







    </LinearLayout>
</ScrollView >
