<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    tools:context="pe.edu.upc.appapoderado.activities.ServicioFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingRight="30dp">

        <Spinner
            android:id="@+id/tipoSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtHijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseHijos"
            android:drawablePadding="3dp"/>

        <CheckBox android:id="@+id/chkCuidadoEspecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cuidado Especial"
            />

        <CheckBox android:id="@+id/chkPrimeroAuxilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Primeros Auxilios"
             />

        <EditText
            android:id="@+id/txtSueldoMinimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/IngreseSueldoMin"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtSueldoMaximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/IngreseSueldoMax"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/IngreseDireccion"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/IngreseCita"
            android:drawablePadding="3dp"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="Descripcion"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSolicitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solicitar"/>

    </LinearLayout>

</ScrollView>
